--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "minimum-stability": "stable",
     "require": {
         "fed/ewma-module-installer-plugin": "~0.0.1",
-        "fed/plugins-fancybox3": "^0.1",
+        "fed/plugins-fancybox3": "~0.1",
+        "fed/plugins-css-element-queries": "~0.1",
         "intervention/image": "^2.3"
     }
 }
